force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/Financial_Reporting_Rule_Exemption__c.object-meta.xml
<CustomObject>
    <label>Financial Reporting Rule Exemption</label>
    <nameField>
        <displayFormat>FRRE-{000000}</displayFormat>
        <label>Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Reporting Rule Exemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>