force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/fields/Exemption_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Reason__c</fullName>
    <label>Exemption Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>