force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/fields/Financial_Reporting_Rule__c.field-meta.xml
<CustomField>
    <fullName>Financial_Reporting_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Reporting Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Financial_Reporting_Rule__c.Hard_Validation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Financial_Reporting_Rule__c</referenceTo>
    <relationshipLabel>Financial Reporting Rule Exemptions</relationshipLabel>
    <relationshipName>QFR_Reporting_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>