force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipName>QFR_Reporting_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>