force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/fields/Rule_Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>Rule_Exemption_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rule Exemption Status ?</label>
    <type>Checkbox</type>
</CustomField>