force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Services must be related to current QFR.</errorMessage>
        <filterItems>
            <field>Service_Line_Item__c.Service_Label__c</field>
            <operation>notEqual</operation>
            <value>Total</value>
        </filterItems>
        <filterItems>
            <field>$Source.Form__c</field>
            <operation>equals</operation>
            <valueField>Service_Line_Item__c.Form__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Line_Item__c</referenceTo>
    <relationshipLabel>Financial Reporting Rule Exemptions</relationshipLabel>
    <relationshipName>QFR_Reporting_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>