force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <formula>Service__r.Service_Name__c</formula>
    <label>Service</label>
    <type>Text</type>
</CustomField>