force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/validationRules/Form_Type_Mismatched.validationRule-meta.xml
<ValidationRule>
    <fullName>Form_Type_Mismatched</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Form__r.Type__c) &lt;&gt;  TEXT(Financial_Reporting_Rule__r.Form_Type__c)</errorConditionFormula>
    <errorDisplayField>Financial_Reporting_Rule__c</errorDisplayField>
    <errorMessage>Not a valid rule for this form type.</errorMessage>
</ValidationRule>