force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/validationRules/Pls_choose_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>Pls_choose_Service</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Financial_Reporting_Rule__r.Name &lt;&gt; &apos;Net assets equals equity&apos;, ISBLANK( Service__c ))</errorConditionFormula>
    <errorDisplayField>Service__c</errorDisplayField>
    <errorMessage>You must provide service for this rule as this rule is applicable for services.</errorMessage>
</ValidationRule>