force-app/main/default/objects/Financial_Reporting_Rule_Exemption__c/validationRules/Service_is_not_mandatory_for_this_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_is_not_mandatory_for_this_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Financial_Reporting_Rule__r.Name =&apos;Net assets equals equity&apos;, NOT(ISBLANK( Service__c )))</errorConditionFormula>
    <errorDisplayField>Service__c</errorDisplayField>
    <errorMessage>Please remove service value as this rule is applicable regardless of services.</errorMessage>
</ValidationRule>